# pico-motor-controller-lib

./: LICENSE  README.md
example/: CMakeLists.txt  cmake_install.cmake  main.c  platform.c  platform.h
lib/: CMakeLists.txt  PID_drive.c  button.c  dc_motor.c  my_adc.c  my_led.c  quadrature_encoder.c  stepper.c
lib/Stepper_Motor_PIO/: CMakeLists.txt  counter.pio  pacer.pio  stepper.pio  stepper_PIO.c  stepper_PIO.h
lib/include/: PID_drive.h  button.h  dc_motor.h  includemyPicolib.h  includemyPicolib_config.h  my_adc.h  my_led.h  myhandletype.h  pio_stepper.h  quadrature_encoder.h  stepper.h
